--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: #cb56f2;
+    background-color: #346f72c6;
     height: 100vh;
 }
 
@@ -318,7 +318,7 @@ header {
 /* ////.....Portfolio......///// */
 
 .portfolio {
-    background: #cb56f2;
+    background: #346f72c6;
     padding: 6rem 0;
 }
 
