--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ header {
 /* ////.....Portfolio......///// */
 
 .portfolio {
-    background: #346f72c6;
+    background-color: #346f72c6;
     padding: 6rem 0;
 }
 
